--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,7 +144,6 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -200,6 +199,7 @@ allow 178.17.174.164;
 allow 178.17.174.198;
 allow 178.175.131.141;
 allow 178.175.142.26;
+allow 178.175.148.209;
 allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.51;
@@ -220,7 +220,6 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
-allow 18.214.230.32;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -987,7 +986,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -1010,7 +1008,6 @@ allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0d::f03c:94ff:fe42:512f;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1051,6 +1048,7 @@ allow 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 allow 2605:6400:20:104e::2;
 allow 2605:6400:20:170c::1;
 allow 2605:6400:20:2417::69;
+allow 2605:6400:20:37f:9440:9e84:a10c:c36;
 allow 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 allow 2605:6400:20:482:3920:1829:1839:1293;
 allow 2605:6400:20:be7::1;
@@ -1242,7 +1240,6 @@ allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
-allow 2a02:2970:1001::4c;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -1348,6 +1345,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1615,6 +1613,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.209.109.8;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1700,7 +1699,6 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.166.139.111;
 allow 46.182.21.248;
-allow 46.182.21.250;
 allow 46.195.74.82;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1802,6 +1800,7 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.198.213;
+allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1830,6 +1829,7 @@ allow 84.38.134.224;
 allow 84.38.134.225;
 allow 84.38.134.226;
 allow 84.38.134.227;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
@@ -1890,7 +1890,6 @@ allow 92.243.24.163;
 allow 92.246.84.133;
 allow 92.249.48.135;
 allow 93.123.12.112;
-allow 93.243.56.177;
 allow 93.90.74.31;
 allow 93.95.225.141;
 allow 93.95.228.125;
@@ -1940,5 +1939,6 @@ allow 95.211.210.103;
 allow 95.211.244.28;
 allow 95.211.7.148;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
