--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,7 +130,6 @@ deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -171,6 +170,7 @@ deny 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 deny 2605:6400:20:104e::2;
 deny 2605:6400:20:170c::1;
 deny 2605:6400:20:2417::69;
+deny 2605:6400:20:37f:9440:9e84:a10c:c36;
 deny 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 deny 2605:6400:20:482:3920:1829:1839:1293;
 deny 2605:6400:20:be7::1;
@@ -361,7 +361,6 @@ deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
-deny 2a02:2970:1001::4c;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
 deny 2a02:7aa0:1619::ba45:e7f2;
@@ -467,6 +466,7 @@ deny 2a05:b0c7:67b0::1;
 deny 2a05:b0c7:67bb::1;
 deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6841::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:696c::1;
 deny 2a05:b0c7:6978::1;
 deny 2a05:b0c7:6b6c::1;
