--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,5 @@
 allow 102.130.113.9;
+allow 102.130.127.117;
 allow 102.219.85.85;
 allow 103.109.101.105;
 allow 103.126.161.54;
@@ -70,7 +71,6 @@ allow 107.189.31.225;
 allow 107.189.31.232;
 allow 107.189.31.33;
 allow 107.189.4.12;
-allow 107.189.4.209;
 allow 107.189.4.76;
 allow 107.189.5.121;
 allow 107.189.5.7;
@@ -161,6 +161,7 @@ allow 162.251.5.152;
 allow 163.172.213.212;
 allow 163.172.45.102;
 allow 163.5.143.76;
+allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
@@ -256,6 +257,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -521,6 +523,11 @@ allow 185.246.86.197;
 allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
+allow 185.29.8.211;
+allow 185.29.8.212;
+allow 185.29.8.213;
+allow 185.29.8.214;
+allow 185.29.8.215;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
@@ -529,6 +536,7 @@ allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
+allow 185.70.8.45;
 allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.219.109;
@@ -783,6 +791,7 @@ allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
+allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
@@ -984,7 +993,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.236.122.62;
 allow 23.94.211.25;
 allow 23.94.36.142;
@@ -1007,7 +1015,6 @@ allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c0d::f03c:94ff:fe42:512f;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
@@ -1215,6 +1222,7 @@ allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:119:b120::;
 allow 2a00:1169:11f:d680::;
+allow 2a00:11c0:1c:311::5;
 allow 2a00:11c0:1f:1::55;
 allow 2a00:1728:3f::c0cc:80;
 allow 2a00:1728:f:f:f:f:c03c:9898;
@@ -1333,6 +1341,7 @@ allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
+allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1362,6 +1371,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1610,7 +1620,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 31.42.185.134;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1621,16 +1630,16 @@ allow 37.120.239.59;
 allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
+allow 37.252.254.33;
+allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 44.216.250.200;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
 allow 45.132.246.245;
-allow 45.134.142.5;
 allow 45.134.225.36;
 allow 45.135.132.20;
 allow 45.138.16.107;
@@ -1667,6 +1676,7 @@ allow 45.151.167.13;
 allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
+allow 45.156.26.111;
 allow 45.56.81.190;
 allow 45.61.184.47;
 allow 45.61.185.172;
@@ -1728,6 +1738,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.20.101.237;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1806,10 +1817,8 @@ allow 80.67.172.162;
 allow 80.78.23.226;
 allow 80.82.78.14;
 allow 81.16.33.42;
-allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.118.242.36;
-allow 82.153.138.153;
 allow 82.153.138.182;
 allow 82.153.138.48;
 allow 82.153.138.79;
@@ -1937,7 +1946,6 @@ allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
-allow 95.211.7.148;
 allow 96.27.198.133;
 allow 96.66.15.152;
 allow 98.128.173.33;
