--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -7,6 +7,7 @@ deny 2001:1b60:3:221:4134:101:0:1;
 deny 2001:1b60:3:239:1003:103:0:1;
 deny 2001:1b60:3:239:1003:106:0:1;
 deny 2001:40e8:0:f090::100;
+deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::9dce;
 deny 2001:41d0:401:3200::3efd;
@@ -129,7 +130,6 @@ deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c0d::f03c:94ff:fe42:512f;
-deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:66c4::1;
@@ -336,6 +336,7 @@ deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
 deny 2a00:1169:119:b120::;
 deny 2a00:1169:11f:d680::;
+deny 2a00:11c0:1c:311::5;
 deny 2a00:11c0:1f:1::55;
 deny 2a00:1728:3f::c0cc:80;
 deny 2a00:1728:f:f:f:f:c03c:9898;
@@ -454,6 +455,7 @@ deny 2a04:52c0:120:a13d::1;
 deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
+deny 2a05:26c0:d1:12:acdc:feed:beef:66;
 deny 2a05:26c0:d1:12:acdc:feed:beef:99;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -483,6 +485,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
